syntax = "proto3";

option go_package = "/protos";

package tarea2.protos;

message Product {
    string title = 1;
    string author = 2;
    string genre = 3;
    int32 pages = 4;
    string publication = 5;
    int32 quantity = 6;
    float price = 7;
}

message Location {
    string address1 = 1;
    string address2 = 2;
    string city = 3;
    string state = 4;
    string postalCode = 5;
    string country = 6;
}

message Customer {
    string name = 1;
    string LastName = 2;
    string email = 3;
    Location location = 4;
    string phone = 5;
}

message Data {
    repeated Product products = 1;
    Customer customer = 2;
}

message ProductList {
    repeated Product products = 1;
}

message OrderResponse {
  string orderId = 1;
  repeated Product products = 2;
  Customer customer = 3;
  repeated Delivery deliveries = 4;
}

message Delivery {
  Customer shippingAddress = 1;
  string shippingMethod = 2;
  string trackingNumber = 3;
}

service VentasService {
    rpc SendData(Data) returns (OrderResponse);
}